--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/harman0093/Tally-lcbo.git"
+  },
   "license": "MIT",
   "scripts": {
     "start": "node server.js"
